--- a/main.css
+++ b/main.css
@@ -20,6 +20,16 @@ h1 {
   margin-top: 100px;
 }
 
+
+h4 {
+  text-align: center;
+  font-size: 60px;
+  line-height: 0.9;
+  width: 90%;
+  margin-top: 100px;
+}
+
+
 .scroll-this-way {
   align-self: flex-end;
   width: 360px;
@@ -159,7 +169,7 @@ h1 {
   width: 10000px;
 }
 .wealth > .wealth-title {
-  flex-basis: 1%;
+  flex-basis: 20%;
   padding: 10px;
 }
 @media (max-width: 450px) {
@@ -176,6 +186,7 @@ h1 {
   color: black;
   margin-top: 1em;
 }
+
 
 .text-infobox .title,
 .infobox .chart {
@@ -295,7 +306,7 @@ h1 {
   font-weight: normal;
 }
 .million {
-  width: 150px;
+  width: 200px;
 }
 .million .wealth {
   width: 31.62px;
